@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/[JavaForge]DockingFrames"/>
+	<classpathentry kind="src" path="testing"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
